--- a/style/kelat.css
+++ b/style/kelat.css
@@ -1,9 +1,10 @@
 ﻿@charset "utf-8";
-/* ////////////////////////////////////// */
-/* public                                 */
-/* by：fico                               */
-/* email : ficozh@163.com                 */
-/* ////////////////////////////////////// */
+/*!
+ * kelat Css Library v1.2.0-beta1
+ * http://git.oschina.net/ficozhe/K-UI
+ *
+ * Date: 2016-04-27
+ */
 *{
 -webkit-text-size-adjust:none;/*禁止自动调整字体大小*/
 -webkit-touch-callout:none;/*禁用系统默认菜单*/
@@ -745,6 +746,7 @@ label.LabelRadio{
 </ol>
 */
 .ListBase .ListItem{padding:5px 10px}
+.ListBase .ListItem:after{display:none}
 /*
 <ol class="ListBlock">
     <li class="ListItem">
@@ -766,14 +768,17 @@ label.LabelRadio{
 */
 .ListBlock{position:relative;background-color:#fff;margin-bottom:12px}
 .ListBlock .ListItem{position:relative}
+.ListBlock .ListItem:after{position:absolute;left:0;bottom:0;right:auto;top:auto;content:'';height:1px;width:100%;background-color:#c8c7cc;z-index:15;
+-webkit-transform-origin:50% 100%;
+		transform-origin:50% 100%}
 .ListBlock:after,
 .ListBlock:before{position:absolute;display:block;content:'';left:0;right:auto;height:1px;width:100%;background-color:#c8c7cc;z-index:15}
 .ListBlock:after{bottom:0;top:auto;
 -webkit-transform-origin:50% 100%;
-transform-origin:50% 100%}
+		transform-origin:50% 100%}
 .ListBlock:before{bottom:auto;top:0;
 -webkit-transform-origin:50% 0;
-transform-origin:50% 0}
+		transform-origin:50% 0}
 
 /* 列表分割 */
 .ListBlock .ItemDivider{background:#F7F7F7;margin-top:-1px;padding:4px 15px;white-space:nowrap;position:relative;max-width:100%;text-overflow:ellipsis;overflow:hidden;color:#8e8e93;z-index:15}
@@ -826,8 +831,7 @@ display:flex;
 -webkit-justify-content:space-between;
         justify-content:space-between
 }
-.ListBlock .ItemInner:after{position:absolute;left:0;bottom:0;right:auto;top:auto;content:'';height:1px;width:100%;background-color:#c8c7cc;z-index:15;-webkit-transform-origin:50% 100%;transform-origin:50% 100%}
-.ListBlock .ListItem:last-child .ItemInner:after{display:none}
+.ListBlock .ListItem:last-child:after{display:none}
 .ListBlock .ItemMedia + .ItemInner{margin-left:15px}
 .ListBlock .ItemMedia i+i{margin-left:5px}
 .ListBlock .ItemLink,
@@ -959,7 +963,7 @@ display:-webkit-box
 .ListBlock.ListCard{overflow:hidden;margin-left:12px;margin-right:12px;border:1px solid #ddd;border-radius:6px;background-color:#fff;background-clip:padding-box}
 .ListBlock.ListCard:after,
 .ListBlock.ListCard:before,
-.ListBlock.ListCard .ListItem:last-child .ItemInner:after{display:none}
+.ListBlock.ListCard .ListItem:last-child:after{display:none}
 
 /*列表块按钮
 <ul class="ListBlock Inset">
@@ -1103,6 +1107,20 @@ display:flex;
 .TabsFixed{position:fixed;left:0;top:0;width:100%;z-index:6000}
 .TabsFixed+.TabsCon{padding-top:55px}
 
+/* === 图片延迟加载 === */
+.LazyLoaded.LazyFadeIn {
+-webkit-animation:lazyFadeIn 600ms;
+		animation:lazyFadeIn 600ms;
+}
+@-webkit-keyframes lazyFadeIn {
+  from{opacity:0}
+  to{opacity:1}
+}
+@keyframes lazyFadeIn {
+  from{opacity:0}
+  to{opacity:1}
+}
+
 
 /*工具栏*/
 .NavBarInner,
@@ -1207,22 +1225,33 @@ display:flex;
 		transform:translate3d(0,0,0);
 }
 
-/*模态框*/
-.ModalBox{position:fixed;left:50%;top:50%;width:280px;max-height:100%;margin-left:-140px;margin-top:0;z-index:500;overflow:hidden;opacity:0;border-radius:6px;background-color:#fff;box-shadow:rgba(0,0,0,0.4) 0 0 5px;
+
+/*蒙板*/
+.ModalBlank,
+.LoadingIndicatorBlank{position:fixed;top:0;left:0;right:0;bottom:0;background-color:rgba(0,0,0,.4);opacity:0;z-index:-1}
+/*模态框*/		
+.ModalBox{position:fixed;left:50%;top:50%;width:280px;max-height:100%;margin-left:-140px;margin-top:0;z-index:500;border-radius:6px;background-color:#fff;box-shadow:rgba(0,0,0,0.4) 0 0 5px;
 -webkit-transform:translate3d(0,0,0) scale(1.185);
-		transform:translate3d(0,0,0) scale(1.185);
+		transform:translate3d(0,0,0) scale(1.185)}
+.ModalBox,
+.ModalBlank,
+.LoadingIndicatorBlank{
 -webkit-transition-property:-webkit-transform, opacity;
    -moz-transition-property:-moz-transform, opacity;
 	-ms-transition-property:-ms-transform, opacity;
 	 -o-transition-property:-o-transform, opacity;
-		transition-property:transform, opacity}
-.ModalBlank,
-.LoadingIndicatorBlank{position:fixed;overflow:hidden;top:0;left:0;height:100%;width:100%;background-color:rgba(0,0,0,.4);visibility:hidden;opacity:0;-webkit-transition-duration:400ms;transition-duration:400ms}
-.ModalBlankVisible{visibility:visible;opacity:1}
-.ModalBox.ModalIn,.ModalBox.ModalOut{
--webkit-transition-duration:.3s;
-		transition-duration:.3s
+		transition-property:transform, opacity	
 }
+.ModalIn,
+.ModalOut,
+.ModalBlankVisibleIn,
+.ModalBlankVisibleOut{
+-webkit-transition-duration:400ms;
+		transition-duration:400ms
+}
+.ModalBlankVisibleIn{opacity:1}
+.ModalBlankVisibleOut{opacity:0}
+
 .ModalBox.ModalIn{opacity:1;
 -webkit-transform:translate3d(0,0,0) scale(1);
 		transform:translate3d(0,0,0) scale(1)
@@ -1305,10 +1334,6 @@ text-transform:uppercase;
 	 -o-transition-property:opacity;
 		transition-property:opacity;
 }
-.ModalPopover.ModalIn,.ModalPopover.ModalOut{
--webkit-transition-duration:.3s;
-		transition-duration:.3s
-}
 .ModalPopover.ModalIn{opacity:1}
 .ModalPopover.ModalOut{opacity:0}
 
@@ -1380,11 +1405,6 @@ box-sizing:border-box;
 -webkit-transform:translate3d(0,100%,0);
 		transform:translate3d(0,100%,0);
 }
-.PopupBox.ModalIn,
-.PopupBox.ModalOut{
--webkit-transition-duration:400ms;
-		transition-duration:400ms;
-}
 .PopupBox.ModalIn{
 -webkit-transform:translate3d(0,0,0);
 		transform:translate3d(0,0,0);
@@ -1414,7 +1434,7 @@ box-sizing:border-box;
 
 
 /*选择器*/
-.PickerModal{position:fixed;left:0;bottom:0;width:100%;height:260px;z-index:12500;display:none;background:#cfd5da;
+.PickerModal{position:fixed;left:0;bottom:0;width:100%;height:260px;z-index:-1;background:#cfd5da;
 -webkit-transition-property:-webkit-transform;
    -moz-transition-property:-moz-transform;
 	-ms-transition-property:-ms-transform;
@@ -1423,18 +1443,13 @@ box-sizing:border-box;
 -webkit-transform:translate3d(0,100%,0);
 		transform:translate3d(0,100%,0);
 }
-.PickerModal.ModalIn,
-.PickerModal.ModalOut{
--webkit-transition-duration:400ms;
-		transition-duration:400ms;
-}
 .PickerModal.ModalIn{
--webkit-transform:translate3d(0, 0, 0);
-		transform:translate3d(0, 0, 0);
+-webkit-transform:translate3d(0,0,0);
+		transform:translate3d(0,0,0);
 }
 .PickerModal.ModalOut{
--webkit-transform:translate3d(0, 100%, 0);
-		transform:translate3d(0, 100%, 0);
+-webkit-transform:translate3d(0,100%,0);
+		transform:translate3d(0,100%,0);
 }
 .PickerModal .PickerModalInner{position:relative;height:100%}
 .PickerModal .ToolBar{position:relative;width:100%;background:#f7f7f8}
@@ -1465,7 +1480,7 @@ height:-webkit-calc(100% - 45px);
 height:-moz-calc(100% - 45px);
 height:calc(100% - 45px);
 }
-
+html.android-4 .PickerModal .ToolBar + .PickerModalInner{height:215px}
 .PickerItems{padding:0;text-align:right;font-size:24px;
 display:-webkit-box;
 display:-ms-flexbox;
@@ -1475,13 +1490,14 @@ display:flex;
    -ms-flex-pack:center;
 -webkit-justify-content:center;
 		justify-content:center;
--webkit-mask-box-image:-webkit-linear-gradient(bottom, transparent, transparent 5%, white 20%, white 80%, transparent 95%, transparent);
--webkit-mask-box-image:linear-gradient(to top, transparent, transparent 5%, white 20%, white 80%, transparent 95%, transparent);
+-webkit-mask-box-image:-webkit-linear-gradient(bottom, transparent, transparent 8%, white 20%, white 80%, transparent 92%, transparent);
+-webkit-mask-box-image:linear-gradient(to top, transparent, transparent 8%, white 20%, white 80%, transparent 92%, transparent);
 }
 .PickerItemsCol{position:relative;overflow:hidden;max-height:100%}
 .PickerItemsCol.PickerItemsCol_left{text-align:left}
 .PickerItemsCol.PickerItemsCol_center{text-align:center}
 .PickerItemsCol.PickerItemsCol_right{text-align:right}
+
 .PickerItemsCol.PickerItemsColDivider{color:#000;
 display:-webkit-box;
 display:-ms-flexbox;
@@ -1498,17 +1514,19 @@ display:flex;
 -webkit-transition-timing-function:ease-out;
 		transition-timing-function:ease-out;
 }
-.PickerItem{position:relative;left:0;top:0;width:100%;height:36px;line-height:36px;padding:0 10px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:#707274;box-sizing:border-box;
+.PickerItem{position:relative;left:0;top:0;width:100%;height:36px;line-height:36px;padding:0 10px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:#222;box-sizing:border-box;
 -webkit-transition-duration:300ms;
 		transition-duration:300ms;
 }
+
+
 .PickerItemsColAbsolute .PickerItem{position:absolute}
 .PickerItem.PickerItemFar{pointer-events:none}
-.PickerItem.PickerSelected{color:#000;
+.PickerItem.PickerSelected{
 -webkit-transform:translate3d(0, 0, 0) rotateX(0deg);
 		transform:translate3d(0, 0, 0) rotateX(0deg);
 }
-.PickerCenterHighlight{position:absolute;left:0;top:50%;height:36px;width:100%;margin-top:-18px;box-sizing:border-box;
+.PickerCenterHighlight{position:absolute;left:0;top:50%;height:36px;width:100%;margin-top:-18px;box-sizing:border-box;z-index:5;
 pointer-events:none;
 }
 .PickerCenterHighlight:after,
@@ -1534,18 +1552,20 @@ pointer-events:none;
   .PickerColumns:not(.PickerModalInline){height:200px;}
 }
 /*3D*/
-.PickerModal.Picker3d .PickerItems{overflow:hidden;
+.Picker3d .PickerItemsCol{overflow:hidden;
 -webkit-perspective:1200px;
 		perspective:1200px;
 }
-.PickerModal.Picker3d .PickerItemsCol,
-.PickerModal.Picker3d .PickerItemsColWrapper,
-.PickerModal.Picker3d .PickerItem {
+.Picker3d .PickerItemsCol,
+.Picker3d .PickerItemsColWrapper,
+.Picker3d .PickerItem{
 -webkit-transform-style:preserve-3d;
 		transform-style:preserve-3d;
+-webkit-transform:rotateY(0deg) rotateX(0deg);
+		transform:rotateY(0deg) rotateX(0deg);
 }
-.PickerModal.Picker3d .PickerItemsCol{overflow:visible}
-.PickerModal.Picker3d .PickerItem{
+.Picker3d .PickerItemsCol{overflow:visible}
+.Picker3d .PickerItem{
 -webkit-transform-origin:center center -110px;
 		transform-origin:center center -110px;
 -webkit-backface-visibility:hidden;
@@ -1553,7 +1573,11 @@ pointer-events:none;
 -webkit-transition-timing-function:ease-out;
 		transition-timing-function:ease-out;
 }
-
+/*
+.Picker3d .PickerItemsCol{width:100%}
+.Picker3d .PickerItemsColWrapper{position:absolute;top:50%;margin-top:-18px;width:100%;height:36px;text-align:center;line-height:36px}
+.Picker3d .PickerItemsColAbsolute{position:relative;float:left;min-width:100px;width:100%;}
+*/
 /*actions*/
 .ActionsModal{left:0;top:auto;right:0;bottom:0;width:100%;margin:0;background-color:transparent;box-shadow:none;
 -webkit-transform:translate3d(0,100%,0) scale(1);
@@ -1630,7 +1654,7 @@ display:flex;
 .NotifyBox .ItemText{height:auto;color:#d2d2d2;line-height:inherit}
 .NotifyBox .ItemText,
 .NotifyBox .ItemSubtitle{font-weight:300}
-.NotifyBox .ItemInner:after{background-color:rgba(255,255,255,0.2)}
+.NotifyBox .ListItem:after{background-color:rgba(255,255,255,0.2)}
 .NotifyBox .ItemMedia i.icon{width:20px;height:20px;-webkit-background-size:cover;background-size:cover;background-position:center;background-repeat:no-repeat}
 
 .NotifyBox .CloseNotify{position:relative;width:19px;height:19px;
@@ -1825,22 +1849,23 @@ display:flex;
 		justify-content:space-between;
 -webkit-box-align:center;
    -ms-flex-align:center;
--webkit-align-items:center;
-		align-items:center
+-webkit-align-items:inherit;
+		align-items:inherit
 }
 .Box .BoxHeader{border-radius:4px 4px 0 0;font-size:14px}
 .Box .BoxFooter{border-radius:0 0 4px 4px;color:#6d6d72}
-.Box .BoxHeader:after,
-.Box .BoxFooter:before{content:'';position:absolute;left:0;right:auto;height:1px;width:100%;background-color:#e1e1e1;display:block;z-index:15}
-.Box .BoxHeader:after{bottom:0;top:auto;
+
+.Box .BoxContent{position:relative}
+.Box .BoxContent:after,
+.Box .BoxContent:before{content:'';position:absolute;left:0;right:auto;height:1px;width:100%;background-color:#e1e1e1;display:block;z-index:15}
+.Box .BoxContent:after{bottom:0;top:auto;
 -webkit-transform-origin:50% 100%;
 		transform-origin:50% 100%
 }
-.Box .BoxFooter:before {top:0;bottom:auto;
+.Box .BoxContent:before {top:0;bottom:auto;
 -webkit-transform-origin:50% 0;
 		transform-origin:50% 0
 }
-.Box .BoxContent{position:relative}
 .Box .BoxContent .BoxContentInner{position:relative;padding:15px 10px}
 .Box .BoxContent .BoxContentInner>p:first-child{margin-top:0}
 .Box .BoxContent .BoxContentInner>p:last-child{margin-bottom:0}
@@ -1863,12 +1888,6 @@ display:flex;
 }
 .Box .BoxFooter .Lump, .Box .BoxHeader .Lump{
 box-sizing:border-box;
-display:-webkit-box;
-display:-ms-flexbox;
-display:-webkit-flex;
-display:flex;
--webkit-box-flex:1;
--ms-flex:1;
 overflow:hidden;
 -webkit-box-pack:justify;
 -ms-flex-pack:justify;
@@ -1912,7 +1931,7 @@ align-items:center;
 
 /*有列表视图的卡片*/
 .Box .ListBlock{margin:0}
-.Box .ListBlock .ListItem:last-child .ItemInner:after,
+.Box .ListBlock .ListItem:last-child:after,
 .Box .ListBlock:before,
 .Box .ListBlock:after{display:none}
 
@@ -2356,8 +2375,8 @@ height:		   calc(100% + 44px);
 .PickerModal.PickerModalInline .ToolBar:after,
 .PickerCenterHighlight:before,
 .PickerCenterHighlight:after,
-.Box .BoxHeader:after,
-.Box .BoxFooter:before,
+.Box .BoxContent:after,
+.Box .BoxContent:before,
 .ActionsButton:after,
 .ActionsLabel:after,
 .ListBlock .ItemDivider:before,
@@ -2365,7 +2384,7 @@ height:		   calc(100% + 44px);
 .ListBlock.Inset .ItemLink.ListButton:after,
 .ListBlock:before,
 .ListBlock:after,
-.ListBlock .ItemInner:after{
+.ListBlock .ListItem:after{
 -webkit-transform:scaleY(.5);
         transform:scaleY(.5)
 }}
@@ -2378,8 +2397,8 @@ height:		   calc(100% + 44px);
 .PickerModal.PickerModalInline .ToolBar:after,
 .PickerCenterHighlight:before,
 .PickerCenterHighlight:after,
-.Box .BoxHeader:after,
-.Box .BoxFooter:before,
+.Box .BoxContent:after,
+.Box .BoxContent:before,
 .ActionsButton:after,
 .ActionsLabel:after,
 .ListBlock .ItemDivider:before,
@@ -2387,7 +2406,7 @@ height:		   calc(100% + 44px);
 .ListBlock.Inset .ItemLink.ListButton:after,
 .ListBlock:before,
 .ListBlock:after,
-.ListBlock .ItemInner:after{
+.ListBlock .ListItem:after{
 -webkit-transform:scaleY(.33);
         transform:scaleY(.33)
 }}
